# mcp-revenue-demo

./: .flake8  .gitignore  .pylintrc  README.md  env.example  lint.sh  pyproject.toml
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: revenue.py
app/core/: __init__.py  config.py
app/database/: __init__.py  session.py
app/database/crud/: __init__.py  crud_payment.py
app/database/models/: __init__.py  payment.py
app/schemas/: __init__.py  payment.py
